tests/compile/non_biject_not_injective.stderr
error: inject: `Axis :: Vertical` is produced by more than one arm; the mapping is not injective
  --> tests/compile/non_biject_not_injective.rs:20:29
   |
20 |         Direction::South => Axis::Vertical,
   |                             ^^^^
